<resources>
    <string name="app_name">CasitaPartyRentalsAdmin</string>
    <string name="action_settings">Settings</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="content_description_media">Imagen del mueble</string>
    <string name="card_title">Titulo</string>
    <string name="secondary_text">subtitulo</string>
    <string name="supporting_text">Descripción</string>
    <string name="min_error_permission_denied">Lo siento,no tienes permiso para ver el inventario</string>
    <string name="main_error_server">Error en el servidor, intente más tarde</string>
    <string name="main_error_remove">Lo siento, usted no tiene permiso de eliminar un producto</string>
    <string name="main_dialog_remove_title">Eliminar mueble</string>
    <string name="main_dialog_remove_message">Este mueble se eliminará de forma permanente.</string>
    <string name="main_dialog_ok">Eliminar</string>
    <string name="common_dialog_cancel">Cancelar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="content_description_delete_img">Borrar imagen</string>
    <string name="addMueble_help_required">Campo requerido</string>
    <string name="mueble_description">Descripción del mueble</string>
    <string name="mueble_hint_name">Nombre del mueble</string>
    <string name="mueble_hint_price">Precio</string>
    <string name="mueble_hint_quantity">Cantidad</string>
    <string name="addMueble_message_validate_max_quantity">El valor debe ser menor a 1000</string>
    <string name="addMueble_message_added_error">No se pudo guardar, intente mas tarde.</string>
    <string name="add_mueble_dialog_title">Añadir mueble</string>
    <string name="add_mueble_dialog_ok">Añadir</string>
    <string name="detalle_dialogDelete_title">Eliminar  foto</string>
    <string name="detalle_dialogDelete_message">¿Esta seguro de querer eliminar la foto?</string>
    <string name="label_dialog_cancel">Cancelar</string>
    <string name="label_dialog_delete">Eliminar</string>
    <string name="detalle_chooser_title">Selecione uno</string>
    <string name="addArtist_dialogUrl_title">Añadir foto desde una URL</string>
    <string name="label_dialog_add">Añadir</string>
    <string name="addMueble_message_successfully">Mueble añadido correctamente</string>
    <string name="common_validate_field_required">Este campo es requerido</string>
    <string name="common_validate_min_quantity">El valor debe ser mayor a 0</string>
    <string name="common_validate_URL">Se requiere la imagen para agregar  el mueble</string>
    <string name="addMueble_name_requied">Favor de ingresar el nombre del producto</string>
    <string name="tn_photo">tnPhoto</string>
    <string name="detailMueble_update_successfully">Mueble Actualizado.</string>
    <string name="detailMueble_update_error">Error al actuzlizar, intente mas tar.de</string>
</resources>
